--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                                 class="w-4 h-4 bg-[#6576FF] rounded-full"></button>
                             <button data-color="Cyan" data-image="image/Green.jpeg"
                                 class="w-4 h-4 bg-[#1FCEC9] rounded-full"></button>
-                            <button data-color="Blue" data-image="image/Blue.jpeg"
+                            <button data-color="Blue" data-image="image/blue.jpeg"
                                 class="w-4 h-4 bg-[#4B97D3] rounded-full"></button>
-                            <button data-color="Black" data-image="image/Black.jpeg"
+                            <button data-color="Black" data-image="image/black.jpeg"
                                 class="w-4 h-4 bg-[#3B4747] rounded-full"></button>
                         </div>
                         <div class="mt-3">
